creates render method for 'todo-list'

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack",
     "build-watch": "webpack -w",
-    "serve": "live-server --port=6121 --mount='/:dist' --ignore='**/node_modules/**' --no-browser"
+    "serve": "live-server --port=6121 --mount=/:dist --ignore='**/node_modules/**' --no-browser"
   },
   "keywords": [],
   "author": "Eduard Bardají Puig",
@@ -14,7 +14,7 @@
   "devDependencies": {
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
-    "babel-plugin-transform-es2015-spread": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.22.0",
     "copy-webpack-plugin": "^4.0.1",
     "live-server": "^1.2.0",
     "webpack": "^2.2.0"
